# mgf-filterer

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
mgf_filterer/: download_manager.py  exceptions.py  mgf_processing.py
tests/: test_download_manager.py  test_foo.py  test_mgf_processing.py
tests/testdata/: cocaine.mgf  erythroxylum_coca.mgf
